feat: prepare for PyPI publishing with Python 3.10 support
- Lowered minimum Python version from 3.11 to 3.10
- Added Python 3.10 classifier
- Enhanced setup.py with comprehensive PyPI metadata
  - Long description from README
  - Project URLs (homepage, issues, docs)
  - Keywords and license
- Added pyproject.toml for modern packaging standards
- Created MANIFEST.in for proper file inclusion
- Added MIT LICENSE file
- Updated kryten-py dependency to >=0.5.7
- Added GitHub Actions workflow for automated PyPI publishing
  - Triggers on release publication
  - Uses trusted publishing (OIDC)
- Bumped version to 2.1.0

--- a/config.json
+++ b/config.json
@@ -1,12 +1,12 @@
 {
   "nats": {
-    "servers": ["nats://localhost:4222"],
+    "servers": ["nats://192.168.0.105:4222"],
     "user": null,
     "password": null,
     "token": null,
     "connect_timeout": 10,
     "reconnect_time_wait": 2,
-    "max_reconnect_attempts": 10,
+    "max_reconnect_attempts": 3,
     "ping_interval": 120
   },
   "channels": [
